fixed overflow on abt page

--- a/src/website.css
+++ b/src/website.css
@@ -441,7 +441,6 @@ img {
 .about-contents {
   width: 100%;
   height: 100%;
-  padding:30px;
   padding-top: 100px;
 }
 
